eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Action_required__c</fullName>
        <label>Action required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allowed_Roles__c</fullName>
        <label>Allowed Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_needed__c</fullName>
        <label>Case needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompletionOpportunityStatus__c</fullName>
        <label>CompletionOpportunityStatus</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompletionOpportunityStep__c</fullName>
        <label>CompletionOpportunityStep</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatesCases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreatesCases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomPageLocation__c</fullName>
        <label>CustomPageLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefaultRestrictionRule__c</fullName>
        <label>DefaultRestrictionRule</label>
        <picklist>
            <picklistValues>
                <fullName>Allow All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allow None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_required__c</fullName>
        <label>Email required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventActions__c</fullName>
        <label>EventActions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventOwner__c</fullName>
        <label>EventOwner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventQueue__c</fullName>
        <label>EventQueue</label>
        <picklist>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedDurationHours__c</fullName>
        <label>ExpectedDurationHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedEffortHours__c</fullName>
        <label>ExpectedEffortHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtCompletionDate__c</fullName>
        <formula>CreatedDate +  SLADays__c</formula>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_updates_required__c</fullName>
        <label>Field updates required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Iterable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualifyingOpportunityStatus__c</fullName>
        <label>QualifyingOpportunityStatus</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QualifyingOpportunityStep__c</fullName>
        <label>QualifyingOpportunityStep</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiredFields__c</fullName>
        <label>RequiredFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollBackToEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RollBackToEvent</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RollbackCode__c</fullName>
        <label>RollbackCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLADays__c</fullName>
        <label>SLADays</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StopsFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StopsFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeToComplete__c</fullName>
        <label>TimeToComplete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateFields__c</fullName>
        <label>UpdateFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UpdateStageValue__c</fullName>
        <label>UpdateStageValue</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VF_Page_Needed__c</fullName>
        <label>VF Page Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PageLocs</fullName>
        <columns>NAME</columns>
        <columns>CustomPageLocation__c</columns>
        <filterScope>Everything</filterScope>
        <label>PageLocs</label>
        <language>en_US</language>
        <sharedTo>
            <role>BusinessAnalyst</role>
            <role>Change_Delivery_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>